[package]
name = "tokio-postgres-rustls"
description = "Rustls integration for tokio-postgres"
version = "0.12.0"
authors = ["Jasper Hugo <jasper@jasperhugo.com>"]
repository = "https://github.com/jbg/tokio-postgres-rustls"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
ring = { version = "0.17", default-features = false, optional = true }
aws-lc-rs = { version = "1.8.0", optional = true }
rustls = { version = "0.23", default-features = false }
tokio = { version = "1", default-features = false }
tokio-postgres = { version = "0.7", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
x509-certificate = { version = "0.23", default-features = false }

[features]
default = ["ring"]
#aws_lc_rs = ["rustls/aws_lc_rs", "tokio-rustls/aws_lc_rs", "dep:aws-lc-rs"]
aws-lc-rs = ["dep:aws_lc_rs"]
#ring = ["rustls/ring", "tokio-rustls/ring", "dep:ring"]
ring = ["dep:ring"]

[dev-dependencies]
env_logger = { version = "0.11", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
tokio-postgres = { version = "0.7", default-features = false, features = [
    "runtime",
] }
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "logging",
    "tls12",
    "ring",
] }
