[package]
name = "tokio-postgres-rustls"
description = "Rustls integration for tokio-postgres"
version = "0.14.0"
authors = [
  "Jasper Hugo <jasper@jasperhugo.com>",
  "Dwayne Sykes <github-public@sykes.pw>",
  "Aumetra Weisman <aumetra@cryptolab.net>",
  "Conrad Ludgate <conradludgate@gmail.com>",
  "Karsten Borgwaldt <kb@spambri.de>",
  "Philip Dubé <philip@peerdb.io>",
  "Michael Sowka <soilfiction@gmail.com>",
  "ol <ol@teuto.net>",
]
repository = "https://github.com/jbg/tokio-postgres-rustls"
edition = "2018"
license = "MIT"
readme = "README.md"

[features]
default = ["aws-lc-rs"]
aws-lc-rs = ["rustls/aws-lc-rs"]
ring = ["rustls/ring"]

[dependencies]
rustls = { version = "0.23", default-features = false }
sha2 = { version = "0.10", default-features = false, features = ["oid"] }
tokio = { version = "1", default-features = false }
tokio-postgres = { version = "0.7", default-features = false, features = [
  "runtime",
] }
tokio-rustls = { version = "0.26", default-features = false }
x509-cert = { version = "0.2.5", default-features = false, features = ["std"] }

[dev-dependencies]
bollard = { version = "0.19.2" }
env_logger = { version = "0.11", default-features = false }
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "logging",
  "tls12",
] }
sha2 = { version = "0.10", default-features = false, features = ["std", "oid"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
